# spark-note-poc

./: Cargo.toml  README.md
spark-note-core/: Cargo.toml
spark-note-core/contracts/: nullifier_registry.mligo
spark-note-core/src/: crypto.rs  error.rs  lib.rs  manager.rs  note.rs  note_prop_test.rs  nullifier.rs  nullifier_type.rs  rng.rs  secret.rs  serialization.rs  tezos.rs  validation.rs  wasm.rs
spark-note-sdk/examples/: ghostnet_demo.rs
spark-note-sdk/src/: error.rs  note.rs
