[package]
name = "spark-note-core"
version = "0.1.0"
edition = "2021"
description = "Spark note management SDK core library"
license = "MIT"
repository = "https://github.com/user/spark-note-poc"
documentation = "https://docs.rs/spark-note-core"
keywords = ["spark", "note", "privacy", "cryptography", "wasm"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "getrandom/js", "serde-wasm-bindgen"]

[dependencies]
blake3 = "1.5"
ark-ec = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-bls12-381 = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
hex = "0.4"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
subtle = "2.5"
hmac = "0.12"
rand = "0.8"
rand_chacha = "0.3"

# UniFFI for native bindings (Swift, Kotlin, Python)
uniffi = { version = "0.28", features = ["cli"] }

# WASM bindings (optional, enabled with --features wasm)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
ark-ed-on-bls12-381 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["crh", "merkle_tree", "r1cs", "snark", "sponge"] }
ark-groth16 = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"

# Tezos integration
tezos_crypto_rs = "0.6.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
base58check = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
proptest = "1.5"


